# arco-catalog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-arco-catalog-aws.yml  update-arco-catalog-gcp.yml
data/aws/: instance_metadata.json  instance_regions.json  series_models.json
data/gcp/: instance_metadata.json  instance_regions.json  series_models.json
scripts/: __init__.py  publish_registry_dataset.py  scrape_ec2_catalog.py  scrape_gcp_catalog.py
scripts/aws/: __init__.py  catalog_validation.py  clean_instance_catalog.py  download.py  instance_regions.py  instance_series.py
scripts/gcp/: __init__.py  catalog_validation.py  clean_instance_catalog.py  download.py
tests/: test_catalog_validation.py  test_gcp_catalog_validation.py
