[project]
name = "arco-catalog"
version = "0.1.0"
description = "AWS EC2 instance catalog scraper and normalizer."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "boto3>=1.40.0",
  "ijson>=3.4.0",
]

[project.scripts]
scrape-ec2-catalog = "scripts.scrape_ec2_catalog:main"
scrape-gcp-catalog = "scripts.scrape_gcp_catalog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
package = true
